# smartscan-cli

./: .gitignore  README.md  compare.py  constants.py  embeddings.py  example_smartscan.conf  install.sh  main.py  organiser.py  pyproject.toml  requirements.txt  run.sh  setup_systemd.sh  systemd.sh  uninstall.sh  utils.py
ml/models/: base_model.py  onnx_model.py
ml/providers/embeddings/clip/: image.py  text.py
ml/providers/embeddings/dino/: image.py
ml/providers/embeddings/minilm/: tokenizer.py
onnx_utils/: convert.py  textencoder.py
sdk/core/embeddings/: embedding_provider.py
sdk/ml/models/: base_model.py
sdk/models/: onnx_model.py
sdk/models/providers/embeddings/: embedding_provider.py
smartscan/: app.py  classifier.py  cli.py  config.py  constants.py  embeddings.py  errors.py  indexer.py  main.py  organiser.py  types.py
smartscan/classifier/: classifier.py
smartscan/data/: scan_history.py
smartscan/indexer/: indexer.py  indexer_listener.py
smartscan/ml/models/: onnx_model.py
smartscan/ml/providers/embeddings/: embedding_provider.py
smartscan/models/: onnx_model.py
smartscan/organiser/: analyser.py  classifier.py  classifier_listener.py  scanner.py  scanner_listener.py
smartscan/processor/: __init__.py  memory.py  metrics.py  processor.py  processor_listener.py  types.py
smartscan/providers/: __init__.py
smartscan/providers/detectors/: detector_provider.py
smartscan/utils/: __init__.py  embeddings.py  file.py  file_utils.py  image.py  image_utils.py  ml_ops.py
systemd/: smartscan.service  smartscan.timer
(+20 files in other folders)
