[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartscan"
version = "0.1.0"
description = "SmartScan provides on-device ML pipelines with support for embeddings, ONNX models, indexing, classification, and efficient batch processing."
requires-python = ">=3.10"

dependencies = [
    "annotated-types==0.7.0",
    "coloredlogs==15.0.1",
    "flatbuffers==25.9.23",
    "humanfriendly==10.0",
    "mpmath==1.3.0",
    "numpy==2.2.4",
    "onnx==1.17.0",
    "onnxruntime==1.21.0",
    "packaging==25.0",
    "pillow==11.1.0",
    "protobuf==6.33.1",
    "psutil==7.1.3",
    "pydantic==2.12.4",
    "pydantic_core==2.41.5",
    "sympy==1.14.0",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0"
]

[tool.setuptools]
packages = ["smartscan"]
